# iq-samples

./: .gitignore  README.md  SUPPORT.md
.github/: copilot-instructions.md
refund-agent-a365/: .dockerignore  AGENTS.md  PLAN.md  README.md  TROUBLESHOOTING.md  agent-instructions.md  azure.yaml
refund-agent-a365/.github/: copilot-instructions.md
refund-agent-a365/agent/: .env.template  a365.config.example.json  agent.py  host_agent_server.py  local_authentication_options.py  pyproject.toml  requirements.txt  start_with_generic_host.py
refund-agent-a365/dashboard/: startup.sh
refund-agent-a365/dashboard/backend/: agent_runner.py  auth.py  chat.py  main.py  requirements.txt  voice.py
refund-agent-a365/dashboard/frontend/: .env.example  index.html  package-lock.json  package.json
refund-agent-a365/scripts/: requirements.txt  setup_foundry_agent.py
refund-agent-a365/scripts/sample_data/: README.md  customers.csv  drivers.csv  example_queries_graph.json  example_queries_lakehouse.json  handoffs.csv  hub_connections.csv  hubs.csv  packages.csv  payments.csv
samples/refund-agent-a365/: .gitignore  README.md
samples/refund-agent-a365/agent/: ToolingManifest.json  (+2 more)
travel-agent-hosted/: .gitignore  README.md
travel-agent-hosted/.github/: copilot-instructions.md
travel-agent-hosted/agent/: .env.template  agent.manifest.yaml  agent.py  agent.yaml  main.py
travel-agent-hosted/evals/: .env.template  conftest.py  data.jsonl  evaluators.py  pytest.ini  requirements.txt  test_travel_agent.py  tracing_setup.py
travel-agent-hosted/knowledge/: travel-policies.json
(+22 files in other folders)
